--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,10 @@
 buildscript {
     repositories {
         jcenter()
-        maven { url = "http://files.minecraftforge.net/maven" }
+        maven {
+            name = "forge"
+            url = "http://files.minecraftforge.net/maven"
+        }
     }
     dependencies {
         classpath 'net.minecraftforge.gradle:ForgeGradle:2.2-SNAPSHOT'
@@ -13,15 +16,10 @@ version = minecraft_version + "-" + version
 group = "com.phylogeny.apitest"
 archivesBaseName = "ApiTest"
 
-sourceCompatibility = targetCompatibility = "1.6"
-compileJava {
-    sourceCompatibility = targetCompatibility = "1.6"
-}
-
 minecraft {
     version = minecraft_version + "-" + forge_version
     runDir = "run"
-    mappings = "snapshot_20161216"
+    mappings = "snapshot_20160518"
     replaceIn "Reference.java"
     replace "@VERSION@", project.version
 }
